--- a/template-files/blueprint-project/package.json
+++ b/template-files/blueprint-project/package.json
@@ -4,7 +4,9 @@
   "description": "An API built with November",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon server.js",
+    "eslint": "eslint ."
   },
   "author": "",
   "repository": {
@@ -15,14 +17,19 @@
   "dependencies": {
     "body-parser": "^1.12.4",
     "express": "^4.12.3",
-    "humps": "^0.5.2",
+    "humps": "^1.0.0",
     "inflect": "^0.3.0",
     "mysql": "^2.6.2",
     "pg": "^4.4.0",
     "pg-hstore": "^2.3.2",
-    "sequelize": "^2.1.3",
+    "sequelize": "^3.19.3",
     "colors": "^1.1.0",
     "prettyjson": "^1.1.1",
     "ssacl-attribute-roles": "0.0.5"
+  },
+  "devDependencies": {
+    "eslint": "^2.3.0",
+    "eslint-config-airbnb": "^6.0.2",
+    "nodemon": "^1.9.1"
   }
 }
